Fix button alignment on the filterContentMenu Fix button alignment on the site menu Fix button alignment on the audio player
ready #477

--- a/source/frontend/src/block/FilterContent/FilterContentMenu/FilterContentMenu.scss
+++ b/source/frontend/src/block/FilterContent/FilterContentMenu/FilterContentMenu.scss
@@ -27,11 +27,17 @@
 		flex-grow: 1;
 	}
 
+
+
 	.button {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 		padding: 0 $sizeGridSecondary 0 $sizeGrid;
+
+		.center-content {
+			@include size(100%);
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
 
 		.label {
 			font: 600 1.2rem / 1 $fontOpenSans;
@@ -163,7 +169,10 @@
 
 		.main-button {
 			@include size(100%, $height);
-			justify-content: center;
+
+			.center-content {
+				justify-content: center;
+			}
 
 			.icon {
 				margin-left: $sizeGrid;
