--- a/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
+++ b/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
@@ -1,8 +1,10 @@
 :local {
 	.audio-player {
-		@include size(100%, calc(1rem + #{$sizeGrid * 2}));
+		@include size(100%, auto);
 		margin: 0.5rem 0;
 		font-size: 0;
+		display: flex;
+		align-items: center;
 	}
 
 	.button {
@@ -22,7 +24,7 @@
 	}
 
 	.wave-form-wrapper {
-		@include size(calc(100% - #{$sizeGrid * 4.5}), 100%);
+		@include size(calc(100% - #{$sizeGrid * 4.5}), $sizeGrid * 2);
 		display: inline-block;
 		vertical-align: top;
 		margin-left: $sizeGrid;
@@ -57,6 +59,12 @@
 			background: rgba(255, 255, 255, 0.8);
 			content: '';
 			z-index: 1;
+		}
+	}
+
+	@include respond-to(SMALL) {
+		.wave-form-wrapper {
+			width: calc(100% - #{mobile-size($sizeGrid * 3)})
 		}
 	}
 }
